Try <a href> and About pages

--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ author:
   impactstory      : 
   lastfm           :
   linkedin         :
-  orcid            : "0000-0002-6645-4721"
+  orcid            : 
   pinterest        :
   soundcloud       :
   stackoverflow    : 
