--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         : 
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=d5L-OV4AAAAJ&hl=zh-CN&oi=sra"
-  email            : "luop@ict.ac.cn"
+  email            : "luop at ict.ac.cn"
   researchgate     :  
   uri              :
   bitbucket        :
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "ping-luo"
+  github           : 
   google_plus      :
   keybase          :
   instagram        :
