--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,9 +3,11 @@ main:
   - title: "Publications"
     url: /publications/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+#  - title: "Blog Posts"
+#    url: /year-archive/
     
+  - title: "Press"
+    url: /press/
   #- title: "CV"
   #  url: /cv/
 
