--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,10 @@
 main:
   - title: "Publications"
     url: /publications/
-        
+  
+  - title: "Students"
+    url: /students/
+  
   - title: "Press"
     url: /press/
     
