--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Ping Luo"
-  avatar           : "luop_avatar.jpg"
+  avatar           : "luop_avatar_small.jpg"
   bio              : "Associate Professor"
   location         : "ICT, CAS, Beijing"
   employer         : 
